tests/specs/run/import_attributes_type_check/type_check.out
Check file:///[WILDCARD]/type_check.ts
TS2339 [ERROR]: Property 'foo' does not exist on type '{ a: string; c: { d: number; }; }'.
console.log(data1.foo);
                  ~~~
    at [WILDCARD]type_check.ts:5:19

TS2339 [ERROR]: Property 'foo' does not exist on type '{ a: string; c: { d: number; }; }'.
console.log(data2.foo);
                  ~~~
    at [WILDCARD]type_check.ts:6:19

Found 2 errors.

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
